syntax = "proto3";

option csharp_namespace = "Common";
import "google/protobuf/empty.proto";
package orders;

service OrderBoard {
  rpc GetOrder (google.protobuf.Empty) returns (Order);
  rpc PostOrderResult (OrderResult) returns (google.protobuf.Empty);
  rpc StreamOrderResults (stream OrderResult) returns (google.protobuf.Empty);
  rpc DuplexStream (stream OrderResult) returns (stream OrderReponse);
  rpc PostOrder (Order) returns (google.protobuf.Empty);
}

message OrderResult {
  int64 OrderId = 1;
  string text = 2;
}

message OrderReponse {
  string text = 2;
}

message Order {
  int64 Id = 1;
  int64 SourceInfo1 = 2;
  int64 SourceInfo2 = 3;
  OrderType Type = 4;
}

enum OrderType{
	Unspec = 0;
	Empty = 1;
	Single = 2;
	ClientStreaming = 3;
	DuplexStreaming = 4;
}